# auto-llm-trading

./: .envrc  .gitignore  Makefile  PROJECT_RULES.md  README.md  pyproject.toml  ralph-impl.sh  ralph-loop.sh  ralph-test.sh
.ralph/: PRD.md  TODO.md  create_tasks  guardrails.md  prompt-implement.md  prompt-test-gen.md
apps/asset/: apps.py  models.py  services.py
apps/asset/migrations/: 0001_initial.py
apps/dart/: apps.py  models.py  services.py
apps/dart/migrations/: 0001_initial.py
apps/market/: models.py  services.py
apps/market/migrations/: 0001_initial.py
apps/news/: api.py  models.py  schemas.py  services.py
apps/news/migrations/: 0001_initial.py
apps/todos/: api.py  models.py  schemas.py  services.py
apps/trader/: apps.py  models.py  services.py
apps/ws/: models.py  services.py
apps/ws/migrations/: 0001_initial.py  (+1 more)
config/: settings.py  settings_test.py
launchd/: com.alt.dart.plist  com.alt.market-realtime.plist  com.alt.news.plist  com.alt.trader.plist  com.alt.ws-subscribe.plist
shared/: models.py  stock_universe.py
shared/utils/: __init__.py  json_helpers.py  market.py
systemd/: alt-dart.service  alt-dart.timer  alt-market-realtime.service  alt-market-realtime.timer  alt-news.service  alt-news.timer  alt-trader.service  alt-ws-subscribe.service
tasks/: 01-공통-llm-호출-및-응답-파싱.md  02-자산-가상체결-서비스.md  03-뉴스-수집-및-요약.md  04-다트-공시-수집.md  05-종목-현재정보-수집.md  06-웹소켓-시세-redis-적재.md  07-트레이더-1회-판단-및-주문실행.md
tests/: test_asset.py  test_dart.py  test_llm_json_helpers.py  test_market.py  test_news.py  test_todos.py  test_trader.py  test_ws.py
(+8 files in other folders)
