[project]
name = "alt"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "django>=5.1",
    "django-ninja>=1.0",
    "psycopg2-binary>=2.9",
    "django-redis>=5.4",
    "python-dotenv>=1.0",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-django>=4.8",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings_test"
python_files = ["test_*.py"]
python_functions = ["test_*"]
